# AsyncTask

./: .gitignore  CMakeLists.txt
include/AsyncTask/: AsyncTaskBase.hpp  TaskManager.hpp  dll_declspec.hpp
mock/: TaskManagerMock.cpp
src/: plugin.cpp  version.h
src/AsyncTask/: AsyncTask.cpp  AsyncTask_manager.hpp  mutex_data.cpp  mutex_data.hpp
